--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,10 @@
-.welcome-card img {
-  max-height: 35vh;
-  overflow: hidden;
+.movie-title {
+  font-family: Benguiat, Roboto, sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  .subtitle {
+    color: #ff0000;
+  }
 }
