Fixed Movie List on browser so that on a full screen, the poster image doesn't take half the screen Started outlining the quote generator

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,10 +1,10 @@
 <ion-content color="warning">
   <ion-grid>
     <ion-row>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -13,10 +13,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -25,10 +25,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -37,10 +37,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -49,10 +49,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -61,10 +61,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
@@ -73,10 +73,10 @@
           <p class="subtitle">(1992)</p>
         </div>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="6" size-sm>
         <ion-card>
           <img
-            src="../../assets/images/reservor_dogs.jpg"
+            src="../../assets/images/reservoir_dogs.jpg"
             alt="Reservoir Dogs"
           />
         </ion-card>
