Added movie posters and movie data to a local json to be used to make fake http requests pending an actual api being created Generating movie list from local data instead of hardcoding Added a toolbar at the top of each page to indicate what page a user is currently viewing and offers a back button that leads to the movie list page

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,90 +1,26 @@
+<ion-header>
+  <ion-toolbar color="dark">
+    <ion-buttons slot="start"> </ion-buttons>
+    <ion-title>Movie List</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content color="warning">
   <ion-grid>
     <ion-row>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
-      <ion-col size="6" size-sm>
-        <ion-card>
-          <img
-            src="../../assets/images/reservoir_dogs.jpg"
-            alt="Reservoir Dogs"
-          />
-        </ion-card>
-        <div class="movie-title">
-          <p>Reservoir Dogs</p>
-          <p class="subtitle">(1992)</p>
-        </div>
-      </ion-col>
+      <ng-container *ngIf="movies$ | async as movies">
+        <ion-col size="6" size-sm *ngFor="let movie of movies">
+          <ion-card (click)="onClickVisitMoviePage(movie.Url)">
+            <img
+              src="../../assets/images/{{movie.Url}}.jpg"
+              [alt]="movie.Title"
+            />
+            <div class="movie-title">
+              <p>{{movie.Title}}</p>
+              <p class="subtitle">({{movie.Year}})</p>
+            </div>
+          </ion-card>
+        </ion-col>
+      </ng-container>
     </ion-row>
   </ion-grid>
 </ion-content>
