--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,35 +1,43 @@
-<ion-content>
+<ion-header>
+  <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/sections/movie-list"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Quote Generator</ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content color="warning">
   <ion-row>
     <ion-col size="12" class="ion-align-items-center">
-      <h1>Quote Generator</h1>
+      <h1 style="color: black">Choose your favorite movies</h1>
     </ion-col>
 
     <ion-col size="12">
-      <ion-item>
+      <ion-item color="dark">
         <ion-label>Test</ion-label>
         <ion-checkbox slot="start"></ion-checkbox>
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-item>
+      <ion-item color="dark">
         <ion-label>Test</ion-label>
         <ion-checkbox slot="start"></ion-checkbox>
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-item>
+      <ion-item color="dark">
         <ion-label>Test</ion-label>
         <ion-checkbox slot="start"></ion-checkbox>
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-item>
+      <ion-item color="dark">
         <ion-label>Test</ion-label>
         <ion-checkbox slot="start"></ion-checkbox>
       </ion-item>
     </ion-col>
     <ion-col size="12">
-      <ion-item>
+      <ion-item color="dark">
         <ion-label>Test</ion-label>
         <ion-checkbox slot="start"></ion-checkbox>
       </ion-item>
