--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,11 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom" color="dark" mode="md">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="movie-list">
       <ion-icon name="film"></ion-icon>
       <ion-label>Movie List</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="quote-generator">
       <ion-icon name="quote"></ion-icon>
       <ion-label>Random Quotes</ion-label>
     </ion-tab-button>
