--- a/src/app/tab1/movie-page/movie-page.component.html
+++ b/src/app/tab1/movie-page/movie-page.component.html
@@ -9,5 +9,23 @@
 <ion-content color="warning">
   <div *ngIf="movie$ | async as movie" style="color:black;">
     {{ movie | json }}
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12">
+          <h1>Plot</h1>
+          <p>{{ movie.Plot }}</p>
+        </ion-col>
+        <ion-col size="12">
+          <iframe
+            width="100%"
+            height="250px"
+            [src]="getSafeUrl(movie.YouTubePlaylistUrl)"
+            frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
