--- a/src/app/tab1/movie-page/movie-page.component.scss
+++ b/src/app/tab1/movie-page/movie-page.component.scss
@@ -2,3 +2,25 @@ h1 {
   font-family: Benguiat, Roboto, sans-serif;
   font-weight: 200;
 }
+.movie-title {
+  font-family: Benguiat, Roboto, sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  .subtitle {
+    color: #ff0000;
+  }
+}
+
+.poster-img {
+  height: 250px;
+  width: 150px;
+}
+
+.item-avatar {
+  width: 100% !important;
+  height: 100% !important;
+  max-width: 100px !important; //any size
+  max-height: 100px !important; //any size
+}
