Updated movie list layout to be more browser-friendly

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,9 +8,10 @@
   <ion-grid>
     <ion-row>
       <ng-container *ngIf="movies$ | async as movies">
-        <ion-col size="6" size-sm *ngFor="let movie of movies">
+        <ion-col sizeXs="6" sizeLg="3" *ngFor="let movie of movies">
           <ion-card (click)="onClickVisitMoviePage(movie.Url)">
             <img
+              style="margin: auto"
               src="../../assets/images/posters/{{movie.Url}}.jpg"
               [alt]="movie.Title"
             />
